Don't hack: rewrites code to use JBang